# hash-reforce

./: .gitignore  CMakeLists.txt  README.md
include/: hash.h  lfunctions.h  random.h
scripts/: main.lua
scripts/lib/: random.lua
src/: main.cc
src/lib/: hash.cc  lfunction.cc  random.cc
